# GMaddon

./: CMakeLists.txt  README.md  main.cpp
include/: addon_txt.hpp  bk_loader.hpp  loader_file.hpp
